Terminei o código HTML para o Header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="shortcut icon" href="./assets/Logo.svg" type="image/x-icon">
 </head>
 <body>
+     <!-- Cabeçalho -->
+     <header class="cabecalho">
+        <div class="cabecalho-logo">
+          <img src="assets/Logo.svg" alt="Logo da OptimusTech" class="cabecalho-logo__imagem">
+        </div>
+
+        <div class="cabecalho-menu">
+          <ul class="cabecalho-menu__lista">
+            <li><a href="#" class="cabecalho-menu__item">Home</a></li>
+            <li><a href="#" class="cabecalho-menu__item">Produtos</a></li>
+            <li><a href="#" class="cabecalho-menu__item">Recursos</a></li>
+            <li><a href="#" class="cabecalho-menu__item">Sobre Nós</a></li>
+          </ul>
+        </div>
+  
+        <div class="cabecalho-botao">
+          <a href="#" class="cabecalho-botao__link">Entrar</a>
+          <button class="cabecalho-botao__cadastro">Cadastrar</button>
+        </div>
+      </header>
     
 </body>
 </html>
