Defini as váriáveis globais, importanto recursos e estilizei o header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OptimusTech</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="./assets/Logo.svg" type="image/x-icon">
 </head>
 <body>
@@ -12,6 +12,7 @@
      <header class="cabecalho">
         <div class="cabecalho-logo">
           <img src="assets/Logo.svg" alt="Logo da OptimusTech" class="cabecalho-logo__imagem">
+          <p class="cabecalho-logo__titulo">OptimusTech</p>
         </div>
 
         <div class="cabecalho-menu">
