Trocando o elemento div para nav, para um contexto mais semantico

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
           <p class="cabecalho-logo__titulo">OptimusTech</p>
         </div>
 
-        <div class="cabecalho-menu">
+        <nav class="cabecalho-menu">
           <ul class="cabecalho-menu__lista">
             <li><a href="#" class="cabecalho-menu__item">Home</a></li>
             <li><a href="#" class="cabecalho-menu__item">Produtos</a></li>
             <li><a href="#" class="cabecalho-menu__item">Recursos</a></li>
             <li><a href="#" class="cabecalho-menu__item">Sobre Nós</a></li>
           </ul>
-        </div>
+        </nav>
   
         <div class="cabecalho-botao">
           <a href="#" class="cabecalho-botao__link">Entrar</a>
