Titulo da pagina como h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <header class="cabecalho">
         <div class="cabecalho-logo">
           <img src="assets/Logo.svg" alt="Logo da OptimusTech" class="cabecalho-logo__imagem">
-          <p class="cabecalho-logo__titulo">OptimusTech</p>
+          <h1 class="cabecalho-logo__titulo">OptimusTech</h1>
         </div>
 
         <nav class="cabecalho-menu">
