Adicionando seção nova, fazendo correções semanticas e estilizando o sobre.css

--- a/index.html
+++ b/index.html
@@ -22,18 +22,23 @@
         <nav class="cabecalho-menu">
             <ul class="cabecalho-menu__lista" aria-label="Itens de navegação">
                 <li><a href="#" aria-label="Direciona para a página inicial da OptimusTech" class="cabecalho-menu__item">Home</a></li>
-                <li><a href="#" aria-label="Sessão de produtos da OptimusTech" class="cabecalho-menu__item">Produtos</a></li>
-                <li><a href="#" aria-label="Sessão de ferramentas e recursos da OptimusTech" class="cabecalho-menu__item">Recursos</a></li>
+                <li><a href="#" aria-label="Seção de produtos da OptimusTech" class="cabecalho-menu__item">Produtos</a></li>
+                <li><a href="#" aria-label="Seção de ferramentas e recursos da OptimusTech" class="cabecalho-menu__item">Recursos</a></li>
                 <li><a href="#" aria-label="Sobre nós" class="cabecalho-menu__item">Sobre Nós</a></li>
             </ul>
         </nav>
 
         <div class="cabecalho-botoes">
-            <a href="#" aria-label="Direciona para uma página ou bloco de login" class="cabecalho-botoes__link">Entrar</a>
-            <button class="cabecalho-botoes__cadastro" aria-label="Direciona para uma página ou bloco de login">Cadastrar</button>
+            <button id="SignIn"class="cabecalho-botoes__login" aria-label="Direciona para uma página ou bloco de login">Entrar</a>
+            <button id="SignUp"class="cabecalho-botoes__cadastro" aria-label="Direciona para uma página ou bloco de login">Cadastrar</button>
         </div>
     </header>
 
+    <section class="container-sobrenos">
+        <span class="container-sobrenos__secao">Sobre nós</span>
+        <h1 class="container-sobrenos__titulo">Por que somos diferentes?</h1>
+        <p class="container-sobrenos__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+    </section>
 </body>
 
 </html>
