Correção de espaçamento html

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         </div>
     </header>
 
+    <!-- Fim do cabeçalho -->
     <section class="container-sobrenos">
         <span class="container-sobrenos__secao">Sobre nós</span>
         <h1 class="container-sobrenos__titulo">Por que somos diferentes?</h1>
         <p class="container-sobrenos__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
     </section>
+    
 </body>
 
 </html>
