Troando button por link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
 
         <div class="cabecalho-botoes">
-            <button id="SignIn"class="cabecalho-botoes__login" aria-label="Direciona para uma página ou bloco de login">Entrar</a>
+            <a href="#" id="SignIn" class="cabecalho-botoes__login" aria-label="Direciona para uma página ou bloco de login">Entrar</a>
             <button id="SignUp"class="cabecalho-botoes__cadastro" aria-label="Direciona para uma página ou bloco de login">Cadastrar</button>
         </div>
     </header>
