--- a/index.html
+++ b/index.html
@@ -48,31 +48,45 @@
 
         <!--Seção das métricas-->
         
-        <section class="container-metrica">
+        <section class="metricas-container">
 
-            <article class="metricas__coluna">
-                <h2 class="metricas__numeros">400+</h2>
-                <figcaption class="metricas__titulo">Projetos concluídos</figcaption>
-                <p class="metricas__texto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            <article class="metricas-container__coluna">
+                <h2 class="metricas-container__numeros">400+</h2>
+                <figcaption class="metricas-container__titulo">Projetos concluídos</figcaption>
+                <p class="metricas-container__texto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
             </article>
 
-            <article class="metricas__coluna">
-                <h2 class="metricas__numeros">100+</h2>
+            <article class="metricas-container__coluna">
+                <h2 class="metricas-container__numeros">100+</h2>
                 <figcaption class="metricas__titulo">Colaboradores</figcaption>
-                <p class="metricas__texto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+                <p class="metricas-container__texto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
             </article>
 
-            <article class="metricas__coluna">
-                <h2 class="metricas__numeros">20k</h2>
-                <figcaption class="metricas__titulo">Downloads</figcaption>
-                <p class="metricas__texto">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+            <article class="metricas-container__coluna">
+                <h2 class="metricas-container__numeros">20k</h2>
+                <figcaption class="metricas-container__titulo">Downloads</figcaption>
+                <p class="metricas-container__texto">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
             </article>
       
-            <article class="metricas__coluna">
-                <h2 class="metricas__numeros">500+</h2>
+            <article class="metricas-container__coluna">
+                <h2 class="metricas-container__numeros">500+</h2>
                 <figcaption class="metricas__titulo">Reviews 5 estrelas</figcaption>
-                <p class="metricas__texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+                <p class="metricas-container__texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
             </article>
+
+        </section>
+
+        <!--Seção de Vagas-->
+
+        <section class="vagas-container">
+
+            <div class="vagas-container__background">
+                <span class="vagas-container__secao">Vagas abertas!</span>
+            </div>
+            <h1 class="vagas-container__titulo">Estamos procurando por talentos</h1>
+            <p class="vagas-container__texto">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+
+            <img src="./assets/people-reunion.svg" alt="Pessoas sentadas em uma mesa de reunião, sorrindo e trabalhando com seus notebooks" class="vagas-container__imagem">
 
         </section>
 
