Criando seção de vagas disponíveis com a área de especialização informada

--- a/index.html
+++ b/index.html
@@ -90,6 +90,62 @@
 
         </section>
 
+        <!--Seção Áreas de vagas-->
+
+        <section class="areas-container">
+
+            <article class="areas-container__bloco">
+                <h3 class="areas-container__vaga">Design</h3>
+
+                <div class="areas-container__card">
+                    <h4 class="areas-container__especializacao">Product Designer</h4>
+                    <div class="areas-container__card__info">
+                        <p class="areas-container__info">Full-time</p>
+                        <p class="areas-container__info">Faixa salarial: R$ 7.000</p>
+                    </div>
+                </div>
+
+                <div class="areas-container__card">
+                    <h4 class="areas-container__especializacao">UX Designer</h4>
+                    <div class="areas-container__card__info">
+                        <p class="areas-container__info">Full-time</p>
+                        <p class="areas-container__info">Faixa salarial: R$ 6.000</p>
+                    </div>
+                </div>
+                
+            </article>
+
+            <article class="areas-container__bloco">
+                <h3 class="areas-container__vaga">Desenvolvimento de Software</h3>
+
+                <div class="areas-container__card">
+                    <h4 class="areas-container__especializacao">Desenvolvedor(a) iOS</h4>
+                    <div class="areas-container__card__info">
+                        <p class="areas-container__info">Full-time</p>
+                        <p class="areas-container__info">Faixa salarial: R$ 8.000</p>
+                    </div>
+                </div>
+
+                <div class="areas-container__card">
+                    <h4 class="areas-container__especializacao">Desenvolvedor(a) Front-end</h4>
+                    <div class="areas-container__card__info">
+                        <p class="areas-container__info">Full-time</p>
+                        <p class="areas-container__info">Faixa salarial: R$ 7.000</p>
+                    </div>
+                </div>
+
+                <div class="areas-container__card">
+                    <h4 class="areas-container__especializacao">Desenvolvedor(a) Back-end</h4>
+                    <div class="areas-container__card__info">
+                        <p class="areas-container__info">Full-time</p>
+                        <p class="areas-container__info">Faixa salarial: R$ 8.000</p>
+                    </div>
+                </div>
+
+            </article>
+
+        </section>
+
     </main>
     
 </body>
