Seção nova, opinião do funcionário

--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
 
         </section>
 
+        <!--Seção de opiniões do funcionário-->
+
+        <section class="opinioes-container">
+
+            <h4 class="opinioes-container__secao">Veja o que nossos colaboradores falam sobre nós</h4>
+            <p class="opinioes-container__texto">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+            <figure class="opinioes-container__avatar">
+                <img src="https://github.com/MarcLabX.png" alt="Foto de perfil do GitHub de MarcLabX">
+                <figcaption>Marcos Ribeiro</figcaption>
+            </figure>
+            <span class="opinioes-container__funcao">Desenvolvedor Web</span>
+
+        </section>
+
     </main>
     
 </body>
