--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
 
         </section>
 
+        <!--Rodapé da página-->
+
+        <footer class="rodape-container">
+
+            <h4 class="rodape-container__titulo">Acompanhe as nossas oportunidades</h4>
+            <p class="rodape-container__texto">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+            <form action="cadastrar" class="rodape-container__formulario">
+                <input type="email" class="rodape-container__email" placeholder="Seu e-mail">
+                <button class="rodape-container__botao">Cadastrar</button>
+            </form>
+            <span class="rodape-container__info">© 2022 OptimusTech. Todos os direitos reservados.</span>
+
+        </footer>
+
     </main>
     
 </body>
