--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
             </ul>
         </nav>
 
-        <div class="cabecalho-botoes">
+        <form action="cadastrar" class="cabecalho-botoes">
             <a href="#" id="SignIn" class="cabecalho-botoes__login" aria-label="Direciona para uma página ou bloco de login">Entrar</a>
             <button id="SignUp" class="cabecalho-botoes__cadastro" aria-label="Direciona para uma página ou bloco de login">Cadastrar</button>
-        </div>
+        </form>
+        
     </header>
 
     <!-- Fim do cabeçalho -->
